--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,22 @@
+# --- SPRING CONFIGURATION ---
 spring.application.name=TvViewAPI
+
+# --- DATABASE CONFIGURATION (PostgreSQL) ---
+spring.datasource.url=jdbc:postgresql://localhost:5432/tvviewdb
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# --- JPA & HIBERNATE CONFIGURATION ---
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# --- OAUTH2 GOOGLE AUTHENTICATION ---
+spring.security.oauth2.client.registration.google.client-id=Ov23liH3RAF4MdVdscpH
+spring.security.oauth2.client.registration.google.client-secret=a23f0b5e2a412566e1598019f95199ea7da941b1
+spring.security.oauth2.client.registration.google.scope=openid,profile,email
+spring.security.oauth2.client.provider.google.issuer-uri=https://accounts.google.com
+
+# --- SERVER CONFIGURATION ---
+server.port=8080
