Updated new properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,15 @@ spring.jpa.show-sql=true
 spring.security.oauth2.client.registration.google.client-id=Ov23liH3RAF4MdVdscpH
 spring.security.oauth2.client.registration.google.client-secret=a23f0b5e2a412566e1598019f95199ea7da941b1
 spring.security.oauth2.client.registration.google.scope=openid,profile,email
+spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/google
 spring.security.oauth2.client.provider.google.issuer-uri=https://accounts.google.com
+
+# Google Authorization & Token URLs (Important)
+spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/v2/auth
+spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
+spring.security.oauth2.client.provider.google.user-info-uri=https://openidconnect.googleapis.com/v1/userinfo
+spring.security.oauth2.client.provider.google.jwk-set-uri=https://www.googleapis.com/oauth2/v3/certs
+spring.security.oauth2.client.provider.google.user-name-attribute=email
 
 # --- SERVER CONFIGURATION ---
 server.port=8080
