--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,27 +4,17 @@ spring.application.name=TvViewAPI
 # --- DATABASE CONFIGURATION (PostgreSQL) ---
 spring.datasource.url=jdbc:postgresql://localhost:5432/tvviewdb
 spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.password=password
 
 # --- JPA & HIBERNATE CONFIGURATION ---
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
 
-# --- OAUTH2 GOOGLE AUTHENTICATION ---
-spring.security.oauth2.client.registration.google.client-id=Ov23liH3RAF4MdVdscpH
-spring.security.oauth2.client.registration.google.client-secret=a23f0b5e2a412566e1598019f95199ea7da941b1
-spring.security.oauth2.client.registration.google.scope=openid,profile,email
-spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/google
-spring.security.oauth2.client.provider.google.issuer-uri=https://accounts.google.com
 
-# Google Authorization & Token URLs (Important)
-spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/v2/auth
-spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
-spring.security.oauth2.client.provider.google.user-info-uri=https://openidconnect.googleapis.com/v1/userinfo
-spring.security.oauth2.client.provider.google.jwk-set-uri=https://www.googleapis.com/oauth2/v3/certs
-spring.security.oauth2.client.provider.google.user-name-attribute=email
+spring.security.oauth2.client.registration.github.client-id=0v23LiH3RAF4MdVdscpH
+spring.security.oauth2.client.registration.github.client-secret=4d42d33563172de962a7f49d3e48492221087e9b
+spring.security.oauth2.client.registration.github.redirect-uri=http://localhost:8080/login/oauth2/code/github
 
 # --- SERVER CONFIGURATION ---
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
 server.port=8080
