--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,38 @@
-# --- SPRING CONFIGURATION ---
+# --- SPRING ---
 spring.application.name=TvViewAPI
 
-# --- DATABASE CONFIGURATION (PostgreSQL) ---
-spring.datasource.url=jdbc:postgresql://localhost:5432/tvviewdb
-spring.datasource.username=root
-spring.datasource.password=password
+# --- DATABASE ---
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 
-# --- JPA & HIBERNATE CONFIGURATION ---
+# --- HIBERNATE---
 spring.jpa.hibernate.ddl-auto=update
 
+spring.security.oauth2.client.provider.google.issuer-uri=https://accounts.google.com
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://accounts.google.com
 
-spring.security.oauth2.client.registration.github.client-id=0v23LiH3RAF4MdVdscpH
-spring.security.oauth2.client.registration.github.client-secret=4d42d33563172de962a7f49d3e48492221087e9b
-spring.security.oauth2.client.registration.github.redirect-uri=http://localhost:8080/login/oauth2/code/github
+# --- OAUTH2 ---
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
+spring.security.oauth2.client.registration.google.redirect-uri=${GOOGLE_REDIRECT_URI}
+spring.security.oauth2.client.registration.google.scope=${GOOGLE_CLIENT_SCOPE}
+
+# OAuth2 Provider Configuration
+spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/auth
+spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
+spring.security.oauth2.client.provider.google.user-info-uri=https://openidconnect.googleapis.com/v1/userinfo
+
+
+
+
+
+
 
 # --- SERVER CONFIGURATION ---
 springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 server.port=8080
+
+# --- LOGGING ---
+logging.level.org.springframework.security=DEBUG
