Setting up docker network for backend, db and nginx

--- a/default.conf
+++ b/default.conf
@@ -2,13 +2,13 @@ server {
     listen 80;
     server_name localhost;
 
-    # Serve images from shared /uploads/slides/
+    # Serve images directly from /uploads/
     location /uploads/ {
         root /;
         autoindex on;
     }
 
-    # Proxy API requests to backend
+    # Proxy all other requests to Spring Boot
     location / {
         proxy_pass http://tvview-backend:8080;
         proxy_set_header Host $host;
