--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -2,7 +2,7 @@ FROM eclipse-temurin:21-jdk
 
 WORKDIR /app
 
-COPY TvViewAPI-0.0.1-SNAPSHOT.jar app.jar
+COPY app.jar app.jar
 COPY .env .env
 
 EXPOSE 8080
