--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - SPRING_PROFILES_ACTIVE=prod
     ports:
       - "8080:8080"
-    command: ["java", "-jar", "TvViewAPI-0.0.1-SNAPSHOT.jar"]
+    command: ["java", "-jar", "app.jar"]
 
   nginx:
     build: .
