--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,5 +24,11 @@ jobs:
     - name: Build the Docker image
       run: docker build . --file Dockerfile -t robinblondin/tvviewapi:latest
 
+    - name: Login to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+
     - name: Push the Docker image
       run: docker push robinblondin/tvviewapi:latest
