--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,28 +7,32 @@ on:
     branches: [ "main" ]
 
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Build with gradle
-      run: ./gradlew bootJar
+      - name: Build with Gradle
+        run: ./gradlew bootJar
 
-    - name: Copy the JAR file
-      run: cp build/libs/TvViewAPI-0.0.1-SNAPSHOT.jar app.jar
+      - name: Copy the JAR file
+        run: cp build/libs/TvViewAPI-0.0.1-SNAPSHOT.jar app.jar
 
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile -t robinblondin/tvviewapi:latest
+      - name: Decode and save credentials.json
+        run: echo "${{ secrets.CREDENTIALS_JSON }}" > credentials.json
 
-    - name: Login to Docker Hub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Build the Docker image
+        run: docker build . --file Dockerfile -t robinblondin/tvviewapi:latest
 
-    - name: Push the Docker image
-      run: docker push robinblondin/tvviewapi:latest
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Push the Docker image
+        run: docker push robinblondin/tvviewapi:latest
+
+      - name: Remove credentials.json
+        run: rm -f credentials.json
