--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,7 +20,7 @@ jobs:
         run: cp build/libs/TvViewAPI-0.0.1-SNAPSHOT.jar app.jar
 
       - name: Decode and save credentials.json
-        run: echo "${{ secrets.CREDENTIALS_JSON }}" > credentials.json
+        run: echo "${{ secrets.CREDENTIALS_JSON }}" > src/main/resources/credentials.json
 
       - name: Build the Docker image
         run: docker build . --file Dockerfile -t robinblondin/tvviewapi:latest
