--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,8 +19,8 @@ jobs:
       - name: Copy the JAR file
         run: cp build/libs/TvViewAPI-0.0.1-SNAPSHOT.jar app.jar
 
-      - name: Decode and save credentials.json
-        run: echo "${{ secrets.CREDENTIALS_JSON }}" > src/main/resources/credentials.json
+      - name: Set CREDENTIALS_JSON environment variable
+        run: echo "CREDENTIALS_JSON=${{ secrets.CREDENTIALS_JSON }}" >> $GITHUB_ENV
 
       - name: Build the Docker image
         run: docker build . --file Dockerfile -t robinblondin/tvviewapi:latest
