--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,9 +9,8 @@ spring.datasource.password=${DB_PASSWORD}
 # --- HIBERNATE---
 spring.jpa.hibernate.ddl-auto=update
 
-spring.security.oauth2.client.provider.google.issuer-uri=https://accounts.google.com
-
 # --- OAUTH2 ---
+spring.security.oauth2.client.provider.google.issuer-uri=https://accounts.google.com
 spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
 spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
 spring.security.oauth2.client.registration.google.redirect-uri=${GOOGLE_REDIRECT_URI}
@@ -26,6 +25,10 @@ spring.security.oauth2.client.provider.google.user-info-uri=https://openidconnec
 springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 server.port=8080
+
+# --- FILE CONFIGURATION ---
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
 
 # --- LOGGING ---
 logging.level.org.springframework.security=DEBUG
