Added step in workflow to trigger deploy hook in VPS

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -34,3 +34,8 @@ jobs:
 
       - name: Remove credentials.json
         run: rm -f credentials.json
+
+      - name: Trigger VPS deploy hook
+        run: |
+          curl -X POST https://tvview.wassblondin.se/deploy \
+            -H "Authorization: Bearer ${{ secrets.VPS_WEBHOOK_TOKEN }}"
